# AuraRide

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json
.claude/: launch.json
.claude/agents/: README.md  code-review.md  color-manifesto-guard.md  deploy.md  design-page-reviewer.md  server-doctor.md
.github/workflows/: api.yml  docs.yml  web.yml  worker.yml
apps/api/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum
apps/ios/: README.md
apps/web/: package.json  tsconfig.node.json  vite.config.ts
apps/worker/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
apps/worker/deploy/: auraride-worker.service
apps/worker/src/auraride_worker/: __init__.py  actors.py  broker.py  budget.py  colors.py  config.py  cos_client.py  db.py  logging_setup.py  main.py  prompts.py  vlm_client.py
apps/worker/tests/: conftest.py  test_actors_aggregate.py  test_actors_colorize.py  test_budget.py  test_colors.py  test_prompts.py  test_vlm_fallback.py
docs/: PRD.md  index.md  社交化-开发任务拆分.md
docs/.vitepress/: config.ts
docs/产品/: PRD.md  一切皆颜色.md  产品骨架-信息架构.md
docs/决策/: ADR-001-在线文档平台.md  ADR-002-iOS交付路径.md  ADR-003-后端技术栈.md  ADR-004-monorepo重组.md  ADR-005-后端开发工作流.md  ADR-006-docker-compose-部署.md
docs/工程/: HOW-TO-EDIT.md  ROADMAP-mvp-a.md  密钥管理指南.md  社交化-开发任务拆分.md
docs/根文档/: AGENTS.md  ATTRIBUTIONS.md  CLAUDE.md  README.md
docs/比赛/: 作品说明文档-初稿.md
infra/: README.md
infra/caddy/: Caddyfile
(+157 files in other folders)
