[project]
name = "auraride-worker"
version = "0.1.0"
description = "AuraRide Python 异步 worker —— VLM 染色 + 段颜色聚合"
authors = [
    { name = "chenzhuowen", email = "brennon_nostrumpej@mail.com" },
]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
    "dramatiq[redis]>=1.17,<2.0",
    "redis>=5.0,<6.0",
    "dashscope>=1.20,<2.0",
    "cos-python-sdk-v5>=1.9,<2.0",
    "psycopg[binary,pool]>=3.2,<4.0",
    "Pillow>=10.3,<12.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "structlog>=24.1,<25.0",
    "tenacity>=8.5,<10.0",
    "httpx>=0.27,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "fakeredis>=2.23,<3.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auraride_worker"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    "E501",   # line length — handled by formatter
    "B008",   # function call in default arg (FastAPI/Depends style)
    "RUF001", # ambiguous unicode — Chinese is intentional
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
